# Job-Posting-Extractor

./: .flake8  README.md  job_extractor.py  job_models.py  main.py  pyproject.toml  requirements.txt  sample_data.py
